Dropdown design fixes (#9137)
* Removed Most Recents in searching

* Icon Pill Width Fix.

* Icon Size and Alignmnet Fixes

* changed Others Icon SVG

* Removed Fixed Height For Dropdowns

* Added Title to dropdown options

* Text Overflow Ellipsis Truncation.

--- a/frontend-new/src/components/AttrQueryComposer/ConversionGoalBlock/index.module.scss
+++ b/frontend-new/src/components/AttrQueryComposer/ConversionGoalBlock/index.module.scss
@@ -36,7 +36,6 @@
 
     &__select {
       width: 380px;
-      height: 480px;
       max-height: 480px;
       position: absolute;
     }
