--- a/frontend-new/src/components/AttrQueryComposer/LinkedEventsBlock/index.module.scss
+++ b/frontend-new/src/components/AttrQueryComposer/LinkedEventsBlock/index.module.scss
@@ -35,7 +35,6 @@
 
     &__select {
       width: 380px;
-      height: 480px;
       max-height: 480px;
       position: absolute;
     }
