--- a/frontend-new/src/components/FaFilterSelect/index.module.scss
+++ b/frontend-new/src/components/FaFilterSelect/index.module.scss
@@ -20,7 +20,6 @@
     &__select {
       top: 0 !important;
       width: 380px;
-      height: 480px;
       max-height: 480px;
       position: absolute;
     }
