--- a/frontend-new/src/components/KPIComposer/QueryBlock/index.module.scss
+++ b/frontend-new/src/components/KPIComposer/QueryBlock/index.module.scss
@@ -47,7 +47,6 @@
 
     &__select {
       width: 380px;
-      height: 480px;
       max-height: 480px;
       position: absolute;
     }
